--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
+        setProperty("archivesBaseName", "StreamSupporter")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
